[package]
name = "wg"
version = "0.1.0"
authors = ["Justin Lovinger"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
clap = { version = "3", features = ["cargo"] }
futures = "0.3"
html5ever = "0.25"
markup5ever_rcdom = "0.1"
num_cpus = "1"
regex = "1"
reqwest = "0.11"
terminal_size = "0.1"
tokio = { version = "1", features = ["full"] }
url = "2"
