[package]
name = "wg"
version = "0.1.0"
authors = ["Justin Lovinger"]
description = "Recursively search the web, starting from URL..., for PATTERN"
license = "MIT"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
num_cpus = "1"
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
sled = "0.34"
terminal_size = "0.1"
tl = "0.7"
tokio = { version = "1", features = ["full"] }
url = "2"
