[package]
name = "webgrep"
version = "0.1.0"
authors = ["Justin Lovinger"]
description = "Recursively search the web, starting from URL..., for PATTERN"
license = "MIT"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bincode = "1"
clap = { version = "3", features = ["derive"] }
console = "0.15"
futures = "0.3"
html5ever = "0.25"
indicatif = "0.17.0-rc.10"
itertools = "0.10"
markup5ever_rcdom = "0.1"
num_cpus = "1"
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
quickcheck = "1"
quickcheck_async = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
